# CW_6

./: .env_example  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_form.html
config/: settings.py  urls.py
email_list/: admin.py  forms.py  models.py  services.py  urls.py  views.py
email_list/management/commands/: mail.py
email_list/templates/email_list/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  main_page.html
email_list/templates/email_list/includes/: inc_main_menu.html
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: user_detail.html  user_form.html  user_list.html
